html document structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+    <!--this is a head-->
+    <head>
+        <!--this is a title element-->
+        <title>My Site Title</title>
+        <!--this is a link tag-->
+        <link rel="stylesheet" href="style.css"> 
+    </head>
+    <!--this is a body element-->
+    <body>
+        
+    </body>
+</html>
